--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,16 +1,15 @@
 <script src="https://giscus.app/client.js"
         data-repo="nicosuki123/hugo-start"
-        data-repo-id="R_kgDOJTFaRg"
+        data-repo-id="R_kgDOLLdVRg"
         data-category="Announcements"
-        data-category-id="DIC_kwDOJTFaRs4CVkLY"
+        data-category-id="DIC_kwDOLLdVRs4Ccz6a"
         data-mapping="pathname"
         data-strict="0"
         data-reactions-enabled="1"
         data-emit-metadata="0"
-        data-input-position="top"
-        data-theme="./giscus.css"
+        data-input-position="bottom"
+        data-theme="preferred_color_scheme"
         data-lang="zh-CN"
-        data-loading="lazy"
         crossorigin="anonymous"
         async>
 </script>
