--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -7,8 +7,8 @@
         data-strict="0"
         data-reactions-enabled="1"
         data-emit-metadata="0"
-        data-input-position="bottom"
-        data-theme="preferred_color_scheme"
+        data-input-position="top"
+        data-theme="./giscus.css"
         data-lang="zh-CN"
         crossorigin="anonymous"
         async>
